<?xml version="1.0"?>
<package format="2"> <name>pointcloud_mapping</name>
  <version>0.0.0</version>
  <description>The pointcloud_mapping package</description>
  <maintainer email="zkl@todo.todo">zkl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>compressed_image_transport</build_depend>
  <build_depend>compressed_depth_image_transport</build_depend>
  <build_depend>kinect2_bridge</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <exec_depend>pcl_ros</exec_depend> <exec_depend>roscpp</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>message_runtime</exec_depend >
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>compressed_depth_image_transport</exec_depend>
  <exec_depend>libpcl-all-dev</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>kinect2_bridge</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>ORB_SLAM2</depend>

  <export>
  </export>
</package>
