<package format="2">
  <name>ORB_SLAM2</name>
  <version>1.0.0</version>
  <description>ORB-SLAM2 ROS wrapper</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
